[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/PNG/Lasers/laserRed06.png" type="Texture" id=1]
[ext_resource path="res://projectiles/Enemy2Laser.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 28.0

[node name="Enemy2Laser" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 1, 1.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy2Laser_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
